angular2/src/app/deck-details/deck-details.component.css
/* ... */
.containerr {
  position: relative;
  float: left;
  width: 200px;
  height: 230px;
  margin: 10px;
  background: #fff;
  /* Set the depth of the elements */
  -webkit-perspective: 800px;
  -moz-perspective: 800px;
  -o-perspective: 800px;
  perspective: 800px;
}

.ct-card {
  width: 100%;
  height: 100%;
  position: absolute;
  cursor: pointer;
  width: 200px;
  /* Set the transition effects */
  -webkit-transition: -webkit-transform 0.4s;
  -moz-transition: -moz-transform 0.4s;
  -o-transition: -o-transform 0.4s;
  transition: transform 0.4s;
  -webkit-transform-style: preserve-3d;
  -moz-transform-style: preserve-3d;
  -o-transform-style: preserve-3d;
  transform-style: preserve-3d;
}

.ct-card.flipped {
  -webkit-transform: rotateY(180deg);
  -moz-transform: rotateY(180deg);
  -o-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.ct-card .front,
.ct-card .back {
  display: block;
  height: 100%;
  width: 100%;
  color: #828181;
  font-family: DINNextRoundedLTPro-Bold,sans-serif;
  text-align: center;
  font-size: 30px;
  position: absolute;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -o-backface-visibility: hidden;
  backface-visibility: hidden;
  box-shadow: 3px 5px 15px 2px rgba(0, 0, 0, 0.2);
}

.ct-card .back {
  -webkit-transform: rotateY(180deg);
  -moz-transform: rotateY(180deg);
  -o-transform: rotateY(180deg);
  transform: rotateY(180deg);
}

.ct-card .back p {
  position: relative;
  float: left;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.del {
  background-color: white;
  border: none;
  outline: none;
}
.del .fa-trash-o {
  color: #276d8c;
  font-size: 25px;
  opacity: 0;
}
.wrapper {
  padding: 10px 0 10px;
}
.wrapper .n-card {
  display: flex;
  margin-top: 25px;
  padding: 20px 0 20px;
  position: relative;
  text-align: center;
}
.wrapper .n-card:hover {
  background-color: #f7f7f7;
}
.wrapper .n-card:hover .del {
  background-color: #f7f7f7;
}
.wrapper .n-card:hover .del .fa-trash-o {
  opacity: 0.7;
}
.wrapper .number {
  flex: 1;
}
.wrapper .front-card {
  flex: 3;
}
.wrapper .front-card .image {
  display: block;
  width: 45px;
  margin: 15px;
}
.wrapper .front-card .add-img {
  width: 100%;
}
.wrapper .back-card {
  flex: 3;
}
.wrapper .list-option {
  flex: 1;
}
.wrapper .f-deck {
  background-color: #fff;
  border-radius: 30px;
  box-shadow: 0 2px 14px 0 rgba(0, 0, 0, .17);
  box-sizing: border-box;
  display: inline-block;
  height: 310px;
  overflow: hidden;
  position: relative;
  text-align: center;
  vertical-align: top;
  width: 90%;
}
.wrapper .f-deck .import-cover-deck {
  position: absolute;
  top: 40%;
  width: 100%;
}
.wrapper .f-deck .import-cover-deck .ct-text {
  border: none;
  color: black;
  font-size: 20px;
  font-weight: bold;
  opacity: 0.8;
  text-align: center;
}




._1QXgH{position:absolute;width:100%;}
._1QXgH{background-color:#fff;border-radius:18px;box-shadow:0 2px 9px rgba(0,0,0,.1);height:100%;left:50%;top:0;-webkit-transform:translateX(-50%);transform:translateX(-50%);}
._1iWkj{height:166px;margin-bottom:12px;position:relative;width:144px;z-index:0;}
._2zwto{height:100%;width:100%;z-index:2;}
._1XPsL{height:99%;top:6px;width:99%;z-index:1;}
.oSJeW{height:98%;top:12px;width:98%;z-index:0;}
@media (max-width:1208px){
._1QXgH{border-radius:18px;}
._1iWkj{height:166px;width:144px;}
}
@media (max-width:1008px){
._1QXgH{border-radius:14.5px;}
._1iWkj{height:134px;width:116px;}
}
@media (max-width:444px){
._1QXgH{border-radius:4vw;}
._1iWkj{height:37vw;margin-bottom:3vw;width:32vw;}
._1XPsL{top:1vw;}
.oSJeW{top:2vw;}
}

._2SILG{background:linear-gradient(90deg,#ffd600,#ffc615);border-radius:14px;display:block;height:100%;overflow:hidden;position:relative;}
._3YFFC{background:#eef1f4;border-radius:25px;height:14px;margin:auto;overflow:hidden;position:absolute;}

._34_xG{display:block;left:50%;position:absolute;top:50%;-webkit-transform:translateX(-50%) translateY(-50%);transform:translateX(-50%) translateY(-50%);z-index:0;}
._1vqs9{border:none;cursor:pointer;display:inline-block;height:166px;margin:12px;padding:0;position:relative;text-align:center;width:144px;}
._27a_4{color:#5c5c5c;font-family:DINNextRoundedLTPro-Bold,sans-serif;font-size:36px;-webkit-transform:translateY(-50%);transform:translateY(-50%);width:100%;z-index:1;}
._27a_4{position:absolute;top:50%;}
._1-nKn{transition:width .5s;transition-timing-function:ease-in-out;}
._21gWC{bottom:18px;left:15%;width:70%;}
@media (max-width:1208px){
._1vqs9,._34_xG{height:143px;width:124px;}
._1vqs9{margin:12px 8px;}
}
@media (max-width:1008px){
._1vqs9,._34_xG{height:134px;width:116px;}
._1vqs9{margin:12px;}
}
@media (max-width:444px){
._1vqs9,._34_xG{height:31vw;width:26.66667vw;}
._1vqs9{margin:2.5vw;}
._27a_4{font-size:27px;}
._21gWC{bottom:3vw;}
}
/* ... */

